# NUCLEO-WL55JC1

./: .mxproject  CMakeCache.txt  CMakeLists.txt  SingleWL55.ioc  build.ninja  cmake_install.cmake  compile_commands.json
Core/Inc/: main.h  stm32wlxx_hal_conf.h  stm32wlxx_it.h  stm32wlxx_nucleo_conf.h
Core/Src/: main.c  stm32wlxx_hal_msp.c  stm32wlxx_it.c  sys_app.c
SubGHz_Phy/App/: subghz_phy_app.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
